--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   intl: ^0.17.0
   flutter_localizations:
     sdk: flutter         
+  dropdown_search: ^5.0.5
+  cupertino_stepper: ^0.2.1
+  
     
 dev_dependencies:
   flutter_lints: ^2.0.0
