--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter         
   dropdown_search: ^5.0.5
   cupertino_stepper: ^0.2.1
+  dropdown_button2: ^1.9.3
   
     
 dev_dependencies:
