--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_storage: ^11.0.13
   cloud_firestore: ^4.4.2
   shared_preferences: ^2.0.17
+  provider: ^6.0.5
+  fluttertoast: ^8.2.1
+  flutter_secure_storage: ^8.0.0
+  
   
     
 dev_dependencies:
