процесс авторизации/регистрации

--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:240045549512:ios:db6968aaeeb538911dc2fd",
-  "FIREBASE_PROJECT_ID": "teammate-c1e03",
-  "GCM_SENDER_ID": "240045549512"
+  "GOOGLE_APP_ID": "1:241663777855:ios:53af854e0178c403dcec8a",
+  "FIREBASE_PROJECT_ID": "teammateapp-44b53",
+  "GCM_SENDER_ID": "241663777855"
 }
