--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.0.5
   fluttertoast: ^8.2.1
   flutter_secure_storage: ^8.0.0
+  flutter_hooks: ^0.18.6
+  mask_text_input_formatter: ^2.4.0
   
   
     
