--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_hooks: ^0.18.6
   mask_text_input_formatter: ^2.4.0
+  collection: ^1.17.0
   
   
     
@@ -56,6 +57,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/cities.json
+    - assets/images/
   uses-material-design: true
 
  
