--- a/spider.yaml
+++ b/spider.yaml
@@ -17,6 +17,6 @@ use_references_list: false
 package: resources
 
 groups:
-  - path: assets/
+  - path: assets/images
     class_name: AppImages
     types: [ .png, .jpg, .jpeg, .webp, .webm, .bmp ]
