--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,17 @@ dependencies:
   flutter_hooks: ^0.18.6
   mask_text_input_formatter: ^2.4.0
   collection: ^1.17.0
+  im_stepper: ^1.0.1+1
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  uuid: ^3.0.7
   
   
     
 dev_dependencies:
+  json_serializable: ^6.6.1
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
   flutter_lints: ^2.0.0
   very_good_analysis: ^4.0.0+1
   # Автогенерация картинок
