--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: ">2.19.0 <4.0.0"
 
 
 dependencies:
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   fluttertoast: ^8.2.1
   flutter_secure_storage: ^8.0.0
+  flutter_form_builder: ^9.0.0
   
   
     
