--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">2.19.0 <4.0.0"
+  sdk: ">2.19.6 <3.0.0"
 
 
 dependencies:
@@ -27,9 +27,9 @@ dependencies:
   google_fonts: ^3.0.1
 
   # Форматирование дат и перевод
-  intl: ^0.18.0
   flutter_localizations:
     sdk: flutter         
+  intl: ^0.18.0
   dropdown_search: ^5.0.5
   cupertino_stepper: ^0.2.1
   dropdown_button2: ^1.9.3
@@ -46,8 +46,12 @@ dependencies:
   device_info_plus: ^9.0.1
 
 
-  form_builder_validators: ^9.0.0
-  flutter_form_builder: ^9.0.0
+
+
+  flutter_local_notifications: ^14.1.0
+  firebase_messaging: ^14.6.2
+  riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.6
 
   
   
