--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">2.19.6 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 
 dependencies:
@@ -21,7 +21,7 @@ dependencies:
   
   # Навигация
   # go_router: ^5.0.5
-  get_it: ^7.2.0
+  get_it: ^7.6.0
 
   # Шрифты
   google_fonts: ^3.0.1
@@ -29,7 +29,7 @@ dependencies:
   # Форматирование дат и перевод
   flutter_localizations:
     sdk: flutter         
-  intl: ^0.18.0
+  intl: ^0.17.0
   dropdown_search: ^5.0.5
   cupertino_stepper: ^0.2.1
   dropdown_button2: ^1.9.3
