--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,9 +27,22 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.angelinagromova.Teammate</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				
 				<string>com.googleusercontent.apps.241663777855-nc2vvjmv3dljnidmkpnbnb4thmj0n6ds</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Bundle Id</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.angelinagromova.Teammate</string>
 			</array>
 		</dict>
 	</array>
