--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,15 +25,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
                 
             </intent-filter>
-        </activity>
-        <intent-filter>
+           <intent-filter>
     <action android:name="android.intent.action.VIEW"/>
     <category android:name="android.intent.category.DEFAULT"/>
     <category android:name="android.intent.category.BROWSABLE"/>
     <data
-        android:host="com.teammate"
+        android:host="example.com"
         android:scheme="https"/>
 </intent-filter>
+        </activity>
+        
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="high_importance_channel" />
