ошибки по linter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.13.1
 
+  very_good_analysis: ^4.0.0
   # Автогенерация картинок
   spider: ^4.0.0
+
 
 flutter_launcher_icons:
   android: true
