--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   riverpod: ^2.3.6
   flutter_riverpod: ^2.3.6
   freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 
   
@@ -78,6 +79,7 @@ dev_dependencies:
   spider: ^4.2.2
   freezed: ^2.4.2
   build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 
 flutter_launcher_icons:
