--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,11 +10,23 @@
 
 include: package:very_good_analysis/analysis_options.yaml
 
+analyzer:
+  plugins:
+    - custom_lint
+  exclude:
+    - '**/*.g.dart'
+    - '**/*.freezed.dart'
+  errors:
+    invalid_annotation_target: ignore
+    flutter_style_todos: ignore
+
 linter:
   rules:
     public_member_api_docs: false
-    one_member_abstracts: false
     sort_pub_dependencies: false
+    avoid_positional_boolean_parameters: false
+    one_member_abstracts: false
+    use_if_null_to_convert_nulls_to_bools: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
