--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_riverpod: ^2.3.6
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  app_settings: ^5.1.1
+  flutter_form_builder: ^9.1.1
 
 
   
